# YoloQtDemo

./: .gitignore  README.md
yolo_qt_demo/: CMakeLists.txt  head.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  source.txt  yoloinference.cpp  yoloinference.h
